2001-02-25  Tom Tromey  <tromey@redhat.com>

	* automake.in: Use IO::File.
	(generate_makefile): Use IO::File.
	(scan_texinfo_file): Likewise.
	(handle_aclocal_m4): Likewise.
	(scan_autoconf_traces): Likewise.
	(scan_one_autoconf_file): Likewise.
	(read_am_file): Likewise.
	(file_contents): Likewise.
	(create): Likewise.

2001-02-25  Akim Demaille  <akim@epita.fr>

	* automake.in (handle_texinfo): Remove code handled by texinfos.am.

2001-02-25  Akim Demaille  <akim@epita.fr>

	* automake.in (&transform): Also call &transform_cond on your
	arguments.
	(&handle_dist): Adjust.
	(&handle_factored_dependencies): Uniq dependencies.

2001-02-25  Akim Demaille  <akim@epita.fr>

	* automake.in (&handle_gettext): Simplify redundant `if'.
	Used &variable_value, don't read %contents directly.

2001-02-25  Akim Demaille  <akim@epita.fr>

	* automake.in ($install_recursive): Remove, replaced with calls to
	`&variable_defined ('SUBDIRS')'.
	(&handle_dist, &handle_clean): Don't transform_cond SUBDIRS since...
	(&file_contents): now does.

2001-02-25  Akim Demaille  <akim@epita.fr>

	* automake.in (&handle_man_pages): $found is dead.

2001-02-25  Akim Demaille  <akim@epita.fr>

	Internally just store the conditionals as space separated lists of
	CONDITIONS (instead of @CONDITIONS@).

	* automake.in (&conditional_true_when, &variable_conditions_sub):
	Split conditions at spaces.
	(&handle_dependencies, &variable_conditions_permutations): Don't
	put @ around conditions.
	(&variable_conditions_cmp): There are no @ to strip.
	(&make_condition): New.
	(&define_pretty_variable, &read_main_am_file, &read_am_file): Use
	it.
	(&read_main_am_file, &read_am_file): Stop playing with @ by hand.
	Join @conditional_stack with spaces.
	(&read_main_am_file): Adjust the output of variables.
	Output `TRUE = true' under the condition `TEST' as `@TEST@TRUE =
	true' and no longer `@TEST@TRUE = @TEST@true'.
	(&variable_conditions_cmp): Rename as...
	(&by_condition): this.