@@ -3463,12 +3463,14 @@ sub handle_gettext
 	    ("AM_GNU_GETTEXT used but SUBDIRS not defined");
 	return;
     }
+
+    my @subdirs = &variable_value_as_list ('SUBDIRS', 'all');
     &am_line_error ('SUBDIRS',
 		    "AM_GNU_GETTEXT used but \`po' not in SUBDIRS")
-      if &variable_value ('SUBDIRS') !~ /\bpo\b/;
+	if ! grep ('po', @subdirs);
     &am_line_error ('SUBDIRS',
 		    "AM_GNU_GETTEXT used but \`intl' not in SUBDIRS")
-      if &variable_value ('SUBDIRS') !~ /\bintl\b/;
+	if ! grep ('intl', @subdirs);
 
     &require_file_with_conf_line ($ac_gettext_line, $GNU, 'ABOUT-NLS');
 
