@@ -237,6 +237,7 @@ subdir2.test \
 subdir3.test \
 subdir4.test \
 subdirbuiltsources.test \
+subdircond.test \
 subobj.test \
 subobj2.test \
 subobj3.test \
