@@ -1,0 +1,24 @@
+#! /bin/sh
+
+# It is ok to have a conditional SUBDIRS when using gettext.
+
+. $srcdir/defs || exit 1
+
+cat >> configure.in << 'END'
+AM_GNU_GETTEXT
+AM_CONDITIONAL(MAUDE, true)
+ALL_LINGUAS=
+AC_SUBST(ALL_LINGUAS)
+END
+
+mkdir po intl
+
+cat > Makefile.am << 'END'
+if MAUDE
+SUBDIRS = po intl
+else
+SUBDIRS =
+endif
+END
+
+$AUTOMAKE
