@@ -1,5 +1,10 @@
 2001-02-25  Tom Tromey  <tromey@redhat.com>
 
+	* tests/Makefile.am (TESTS): Added subdircond.test.
+	* tests/subdircond.test: New file.
+	* automake.in (handle_gettext): Don't fail if SUBDIRS
+	conditionally defined.
+
 	* automake.in: Use IO::File.
 	(generate_makefile): Use IO::File.
 	(scan_texinfo_file): Likewise.
